gcc/testsuite/gdc.test/runnable/imports/extern1a.d
extern (C)
{
    int x = 3;
}
