gcc/testsuite/gdc.test/fail_compilation/fail7603c.d
enum x = 3;
void test(ref int val = x) { }
